--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    max-width: 550px;
+    margin: 50px auto 0 auto;
+}
+
+.immagine {
+    width: 100%;
+    height: 250px;
+}
+
+.immagine img {
+    width: 100%;
+    height: 100%;
+}
