--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,44 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 #container {
     max-width: 550px;
-    margin: 50px auto 50px auto;
+    margin: 30px auto;
+    text-align: center;
+    position: relative;
+    padding: 0 30px;
 }
 
 .immagine {
-    width: 550px;
     height: 250px;
+    display: none;
 }
 
 .immagine img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+}
+
+.active {
+    display: block;
+}
+
+.prev, .next {
+    position: absolute;
+    background-color: #CCC;
+    border-radius: 50%;
+    color: #000;
+    padding: 0 2px;
+}
+
+.prev {
+    top: 6px;
+}
+
+.next {
+    bottom: 6px;
 }
